force-app/main/default/objects/Order__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent Account related to customer</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders Cust</relationshipLabel>
    <relationshipName>Orders_Cust</relationshipName>
    <type>Lookup</type>
</CustomField>