force-app/main/default/objects/Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The customer record under which order is created</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders Cust</relationshipLabel>
    <relationshipName>Orders_Cust</relationshipName>
    <type>Lookup</type>
</CustomField>