force-app/main/default/objects/Order__c/fields/DeliverDate__c.field-meta.xml
<CustomField>
    <fullName>DeliverDate__c</fullName>
    <inlineHelpText>The date which the order has been delivered</inlineHelpText>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>