force-app/main/default/objects/Order__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <inlineHelpText>Order date</inlineHelpText>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>