force-app/main/default/objects/Order__c/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <inlineHelpText>The order Quantity</inlineHelpText>
    <label>Total Items</label>
    <summarizedField>Order_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order_Cust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>