force-app/main/default/objects/Order__c/validationRules/Customer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Customer__c)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Customer Must be required</errorMessage>
</ValidationRule>